@@ -1,5 +1,6 @@
 2003-09-02
-  Updated windows.html and index.html by Bill Clementson-minor edit.
+  Updated windows.html and index.html by Bill Clementson-minor edits and
+  update of cua-emul.el download site.
 
 2003-09-01
   Updated windows.html, index.html, and .emacs by Bill Clementson to 
